--- a/my-portifolio/src/Style.css
+++ b/my-portifolio/src/Style.css
@@ -43,3 +43,17 @@ nav a {
 .social-links a:hover {
     color: #0073b1; /* example hover color */
 }
+/* .profile-pic {
+  width: 160px;
+  height: 160px;
+  border-radius: 50%;
+  object-fit: cover;
+  display: block;
+}
+.profile-container {
+  text-align: center;
+  margin-top: 20px;
+}
+.profile-pic {
+  margin: 0 auto;
+} */
